# clear-bow

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  setup.py  tox.ini
clear_bow/: classifier.py  dev.ipynb  model.py  model_dev.py
clear_bow/tests/: conftest.py  dev.ipynb  test_classifier.py  test_dictionary_wrapper.py
src/clear_bow/: __init__.py  classifier.py
tests/: conftest.py  test_classifier.py
