[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clear-bow"
dynamic = ["version"]
description = "A dictionary-based text classification library"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Sam Hardy", email = "samhardyhey@gmail.com" }
]
keywords = ["python", "text-classification", "dictionary-based", "classifier"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

# Dependencies should be directly under [project], not under [project.dependencies]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/samhardyhey/clear-bow"
Repository = "https://github.com/samhardyhey/clear-bow.git"
Issues = "https://github.com/samhardyhey/clear-bow/issues"

[project.optional-dependencies]
dev = [
    "build==1.2.2.post1",
    "tox==4.24.2",
    "twine==6.1.0",
    "setuptools_scm==8.0.0",
    "pypi-cleanup==0.1.8",
    "pytest==8.3.5",
    "pytest-cov==4.1.0",
]

[tool.setuptools_scm]
write_to = "src/clear_bow/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=clear_bow --cov-report=term-missing"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["clear_bow"]